<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>

        <SwitchPreferenceCompat
            app:key="auto-activate"
            app:title="@string/auto_activate_title"
            app:iconSpaceReserved="false"
            android:textSize="@dimen/text_size_big" />

        <SwitchPreferenceCompat
            app:dependency="auto-activate"
            app:key="auto_activate_lights"
            app:summaryOff="@string/lights_summary_off"
            app:summaryOn="@string/lights_summary_on"
            app:title="@string/auto_activate_lights"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:dependency="auto-activate"
            app:key="auto_activate_fan"
            app:summaryOff="@string/fan_summary_off"
            app:summaryOn="@string/fan_summary_on"
            app:title="@string/auto_activate_fan"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>
